# Auto-Apply-

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  ENGINEERING_GUIDE.md  MVP_STATUS.md  Makefile  PRD.md  PROJECT_PLAN.md  README.md  ROADMAP.md  STATE.md  TODO.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.husky/: pre-commit
apps/: AGENTS.md
config/: AGENTS.md
contracts/: AGENTS.md
docs/: AGENTS.md  API.md  CONTRIBUTING.md  GETTING_STARTED.md  PHASE_0B_1_TECHNICAL_DESIGN.md  PHASE_0B_2_REPORT.md  PHASE_0C_REPORT.md  PHASE_0D_REPORT.md  PHASE_0_AUDIT_REPORT.md  PHASE_1_REPORT.md  PHASE_1_REVIEW_REPORT.md  PHASE_2_REPORT.md  PHASE_2_REVIEW_REPORT.md  PHASE_3_1_REPORT.md  PHASE_3_1_REVIEW_REPORT.md  PHASE_3_2_REPORT.md  PHASE_3_2_REVIEW_REPORT.md  PHASE_3_3_REPORT.md  PHASE_3_3_REVIEW_REPORT.md  PHASE_3_4_REPORT.md  PHASE_3_4_REVIEW_REPORT.md  PHASE_3_5_REPORT.md  PHASE_3_5_REVIEW_REPORT.md  PHASE_3_6_REPORT.md  PHASE_3_6_REVIEW_REPORT.md  PHASE_3_7_RELEASE_AUDIT.md  PHASE_3_7_REPORT.md  PHASE_4_1_REPORT.md  PHASE_4_1_REVIEW_REPORT.md  PHASE_4_2_REPORT.md  PHASE_4_2_REVIEW_REPORT.md  PHASE_4_3_REPORT.md  PHASE_4_3_REVIEW_REPORT.md  PHASE_4_4_REPORT.md  PROVIDER_PLUGIN_FRAMEWORK.md  QA_SMOKE_REPORT_2026_06_30.md  REPOSITORY_HEALTH.md
experiments/: AGENTS.md
playbooks/: AGENTS.md  adding-dashboard.md  adding-llm.md  adding-provider.md  browser-smoke-test.md  debugging.md  local-qa-reset-seed.md  release.md
scripts/: AGENTS.md  (+3 more)
(+130 files in other folders)
