[project]
name = "job-agent"
version = "0.0.0"
description = "Engineering infrastructure for the Job Agent MVP."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic-settings>=2.10.0",
  "python-multipart>=0.0.20",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pyright>=1.1.402",
  "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["services/api/src"]
testpaths = ["services/api/tests"]

[tool.pyright]
include = ["services/api/src", "services/api/tests"]
extraPaths = ["services/api/src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
